# Krake

./: README.md
backend/: pyproject.toml  test_system.py  verify_system.py
backend/src/: main.py
backend/src/config/: settings.py
backend/src/models/: __init__.py  affiliate_bot.py  agent.py  email.py  monarch_app.py  social_post.py  task.py  trading_bot.py  user.py  workspace.py
backend/src/routes/: __init__.py  affiliate_bot.py  agents.py  api_endpoints.md  command.py  email.py  monarch_app.py  social_post.py  system_test.py  tasks.py  trading_bot.py  workspaces.py
database/schemas/: schema.md
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.conf
docs/: architecture.md  deployment.md  deployment_guide.md  file_structure.md  implementation_plan.md  implementation_summary.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  index.html
frontend/src/components/: component_structure.md
frontend/src/components/agents/: SintraAgents.tsx
frontend/src/components/coordinator/: CoordinatorOverview.tsx
frontend/src/components/error/: ErrorHandler.tsx
frontend/src/components/integrations/: AffiliateBotManager.tsx  AppControl.tsx  BinancePanel.tsx  CrossPlatformAutoPosting.tsx  EmailBuilderManager.tsx  (+5 more)
frontend/src/contexts/: AuthContext.tsx  CommandContext.tsx  WorkspaceContext.tsx
frontend/src/pages/: DashboardPage.tsx  HardLifeModeWorkspacePage.tsx  LunabotsWorkspacePage.tsx  LunavoWorkspacePage.tsx  ManagementWorkspacePage.tsx  MonarchWorkspacePage.tsx  TodoWorkspacePage.tsx
(+4 files in other folders)
